Some small performance improvements
git-svn-id: https://svn.apache.org/repos/asf/james/hupa/trunk@1174812 13f79535-47bb-0310-9956-ffa450edef68